[package]
name = "ypir"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"

[features]
default = ["server"]
server = []

[dependencies]
# spiral-rs = { git = "https://github.com/menonsamir/spiral-rs.git", rev = "6929441" }
spiral-rs = { path = "../spiral-rs/", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
fastrand = "2.0.0"
log = "0.4.20"
env_logger = "0.11.1"
clap = { version = "4.5.0", features = ["derive"] }
test-log = "0.2.14"

# [profile.release]
# lto = "fat"

[profile.release-with-debug]
inherits = "release"
debug = true
