[package]
name = "ypir"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"

[features]
default = ["server", "http_server", "http_client"]
server = []
explicit_avx512 = []
http_server = ["actix-web", "actix-http", "actix-cors", "futures", "bzip2", "base64"]
http_client = ["reqwest"]

[dependencies]
spiral-rs = { git = "https://github.com/menonsamir/spiral-rs.git", default-features = false, rev = "8e1bed3" }
# spiral-rs = { path = "../spiral-rs/", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
fastrand = "2.0.0"
log = "0.4.20"
env_logger = "0.11.1"
clap = { version = "4.5.0", features = ["derive"] }
test-log = "0.2.14"

actix-web = { optional = true, version = "4", default_features = false, features = ["macros", "compress-gzip"] }
actix-http = { optional = true, version = "3.7.0" }
actix-cors = { optional = true, version = "0.7.0" }
futures = { optional = true, version = "0.3" }
bzip2 = { optional = true, version = "0.4.4" }
base64 = { optional = true, version = "0.22.1" }
reqwest = { optional = true, version = "0.12", features = ["blocking"] }


# [profile.release]
# lto = "fat"

[profile.release-with-debug]
inherits = "release"
debug = true
