[package]
name = "ypir-client"
description = "Client for YPIR"
version = "0.1.0"
authors = ["Samir Menon <menon.samir@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
wasm-bindgen = "0.2.45"
ypir = { path = "../../", default-features = false, features = [] }
spiral-rs = { path = "../../../spiral-rs/"}
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_core = { version = "0.6" }

[dependencies.web-sys]
version = "0.3.22"
features = ["console", "Crypto", "Window"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
